QPID-8646: [Broker-J] JUnit 5 tests refactoring for broker-plugins/amqp-0-10-protocol