@@ -25,7 +25,7 @@ import static org.hamcrest.CoreMatchers.equalTo;
 import static org.hamcrest.CoreMatchers.is;
 import static org.hamcrest.MatcherAssert.assertThat;
 
-import java.util.Collections;
+import java.util.Map;
 
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
@@ -41,56 +41,56 @@ import org.apache.qpid.server.store.MessageStore;
 import org.apache.qpid.server.store.TestMemoryMessageStore;
 import org.apache.qpid.test.utils.UnitTestBase;
 
-public class MessageTransferMessageMutatorTest extends UnitTestBase
+class MessageTransferMessageMutatorTest extends UnitTestBase
 {
     private static final short TEST_PRIORITY = (short) 1;
     private static final String TEST_HEADER_NAME = "foo";
     private static final String TEST_HEADER_VALUE = "bar";
     private static final String TEST_CONTENT_TYPE = "text/plain";
     private static final String TEST_CONTENT = "testContent";
+
     private MessageStore _messageStore;
     private MessageTransferMessageMutator _messageMutator;
 
     @BeforeEach
-    public void setUp() throws Exception
+    void setUp()
     {
         _messageStore = new TestMemoryMessageStore();
         final MessageTransferMessage message = createTestMessage();
         _messageMutator = new MessageTransferMessageMutator(message, _messageStore);
     }
 
-
     @AfterEach
-    public void tearDown()
+    void tearDown()
     {
         _messageStore.closeMessageStore();
     }
 
     @Test
-    public void setPriority()
+    void setPriority()
     {
         _messageMutator.setPriority((byte) (TEST_PRIORITY + 1));
         assertThat(_messageMutator.getPriority(), is(equalTo((byte) (TEST_PRIORITY + 1))));
     }
 
     @Test
-    public void getPriority()
+    void getPriority()
     {
         assertThat((int) _messageMutator.getPriority(), is(equalTo((int) TEST_PRIORITY)));
     }
 
     @Test
-    public void create()
+    void create()
     {
         _messageMutator.setPriority((byte) (TEST_PRIORITY + 1));
 
-        MessageTransferMessage newMessage = _messageMutator.create();
+        final MessageTransferMessage newMessage = _messageMutator.create();
 
         assertThat(newMessage.getMessageHeader().getPriority(), is(equalTo((byte) (TEST_PRIORITY + 1))));
         assertThat(newMessage.getMessageHeader().getMimeType(), is(equalTo(TEST_CONTENT_TYPE)));
         assertThat(newMessage.getMessageHeader().getHeader(TEST_HEADER_NAME), is(equalTo(TEST_HEADER_VALUE)));
 
-        QpidByteBuffer content = newMessage.getContent();
+        final QpidByteBuffer content = newMessage.getContent();
 
         final byte[] bytes = new byte[content.remaining()];
         content.copyTo(bytes);
@@ -104,7 +104,7 @@ public class MessageTransferMessageMutatorTest extends UnitTestBase
         final MessageProperties messageProperties = new MessageProperties();
 
         messageProperties.setContentType(TEST_CONTENT_TYPE);
-        messageProperties.setApplicationHeaders(Collections.singletonMap(TEST_HEADER_NAME, TEST_HEADER_VALUE));
+        messageProperties.setApplicationHeaders(Map.of(TEST_HEADER_NAME, TEST_HEADER_VALUE));
 
         final Header header = new Header(deliveryProperties, messageProperties);
         final QpidByteBuffer content = QpidByteBuffer.wrap(TEST_CONTENT.getBytes(UTF_8));
@@ -114,5 +114,4 @@ public class MessageTransferMessageMutatorTest extends UnitTestBase
         addedMessage.addContent(content);
         return new MessageTransferMessage(addedMessage.allContentAdded(), null);
     }
-
 }
